# xray

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  XRAY_SCOPED_TOKEN_REGEX_OPTIMIZATION_DESIGN_RU_20260723.md  build.rs  clippy.toml  deny.toml  e2e-test.ps1  user-story_xray-grep-alternation-advisory-smart-suppression_2026-04-26.md  user-story_xray-grep-alternation-split-hint_2026-04-26.md  user-story_xray-grep-lineRegex-perf-hints_2026-04-26.md  user-story_xray-grep-literal-prefilter-scope-aware-counters_2026-04-26.md
.github/agents/: xray-code-reviewer.agent.md  xray-script-reviewer.agent.md
.github/hooks/: block-rustfmt.json  block-rustfmt.ps1
.github/workflows/: ci.yml  clippy.yml  virustotal.yml
.roo/rules/: project-context.md
benches/: search_benchmarks.rs
benches/fixtures/: d20-corpus-manifest.json
docs/: architecture.md  benchmarks.md  cli-reference.md  concurrency.md  di-support.md  e2e-test-plan.md  installation.md  mcp-filter-design.md  mcp-guide.md  storage.md  tradeoffs.md  use-cases.md
docs/bug-reports/: 2026-04-26_xml-deeply-nested-tree-sitter-flake.md  bug-report_xray-index-freshness-reindex-cache-and-stale-branch-warning_2026-04-28.md  bug-report_xray-unbounded-work-hot-paths_2026-05-03.md
docs/code-reviews/: 2026-04-21_full-snapshot-main-part6.md
docs/e2e/: README.md  cli-tests.md  git-tests.md  infrastructure-tests.md  language-tests.md  mcp-callers-tests.md  mcp-definitions-tests.md  mcp-fast-edit-tests.md  mcp-grep-tests.md
docs/measurements/: ac4-literal-extraction-bench.md
prompts/: rust-expert-code-review-prompt.md
scripts/: analyze-transcript.ps1  bench-d20-csharp-semantics.ps1  bench-git-perf.ps1  check-product-names.ps1  install-local.ps1  measure-ac4-shared.ps1  setup-xray.ps1  test-d20-release.ps1  test-detect-extensions.ps1
scripts/mcp-filter/: clean.sh  smudge.sh  test-e2e.ps1  test-embedded-sync.ps1  test-install-from-worktree.ps1  test-plain-uninstall.ps1  test-roundtrip.ps1  test-standalone-install.ps1  test-visible-mode.ps1  test-vscode-tracked.ps1  test-worktree.ps1
scripts/mcp-filter/fixtures/: 02-single-server.canonical.json  03-multi-server-with-braces-in-args.canonical.json  (+1 more)
src/: error.rs  error_tests.rs  index.rs  index_tests.rs  lib.rs  lib_property_tests.rs  lib_tests.rs  main.rs  main_tests.rs  tips.rs  tips_tests.rs
src/cli/: args.rs  cli_tests.rs  info.rs  info_tests.rs  mod.rs  serve.rs
src/definitions/: audit_tests.rs  csharp_semantics.rs  definitions_tests.rs  definitions_tests_csharp.rs  definitions_tests_rust.rs  definitions_tests_sql.rs  definitions_tests_typescript.rs  definitions_tests_xml.rs  incremental.rs  mod.rs  parser_csharp.rs  parser_rust.rs  parser_sql.rs  parser_typescript.rs  parser_xml.rs  storage.rs  storage_tests.rs  tree_sitter_utils.rs  tree_sitter_utils_tests.rs  types.rs
src/git/: cache.rs  cache_tests.rs  git_tests.rs  mod.rs
src/mcp/: lock_order.rs  mod.rs  protocol.rs  protocol_tests.rs  server.rs  server_tests.rs  watcher.rs  watcher_tests.rs
user-stories/: git-history-cache-design.md  git-history-integration-design.md
(+37 files in other folders)
