[package]
name = "search"
version = "0.1.0"
edition = "2024"
authors = ["Sergey Pustynsky"]
description = "High-performance code search engine with inverted indexing and AST-based code intelligence"
license = "MIT OR Apache-2.0"

[lib]
name = "search"
path = "src/lib.rs"

[[bin]]
name = "search-index"
path = "src/main.rs"

[dependencies]
ignore = "0.4"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
dirs = "6"
notify = "6"
tree-sitter = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-typescript = "0.23"
# tree-sitter-sequel-tsql removed: version 0.4 requires tree-sitter language version 15,
# but tree-sitter 0.24 only supports versions 13-14. SQL parsing is disabled until a
# compatible T-SQL grammar is available.
lz4_flex = "0.11"
mimalloc = { version = "0.1", features = ["override"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
ctrlc = "3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
tempfile = "3"

[[bench]]
name = "search_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
strip = true
