[package]
name = "search-index"
version = "0.1.0"
edition = "2024"
authors = ["Sergey Pustynsky"]
description = "High-performance code search engine with inverted indexing and AST-based code intelligence"
license = "MIT OR Apache-2.0"

[lib]
name = "search_index"
path = "src/lib.rs"

[[bin]]
name = "search-index"
path = "src/main.rs"

[features]
default = ["lang-csharp", "lang-typescript", "lang-sql", "lang-rust"]
lang-csharp = ["dep:tree-sitter", "dep:tree-sitter-c-sharp"]
lang-typescript = ["dep:tree-sitter", "dep:tree-sitter-typescript"]
lang-sql = []
lang-rust = ["dep:tree-sitter", "dep:tree-sitter-rust"]

[dependencies]
ignore = "0.4"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
dirs = "6"
notify = "6"
tree-sitter = { version = "0.24", optional = true }
tree-sitter-c-sharp = { version = "0.23", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-rust = { version = "0.23", optional = true }
# tree-sitter-sequel-tsql removed: version 0.4.2 requires tree-sitter language ABI version 15,
# but tree-sitter 0.24 only supports versions 13-14. Verified 2026-02-23: still incompatible.
# SQL parsing is disabled until a compatible T-SQL grammar is available.
similar = "2"
lz4_flex = "0.11"
mimalloc = { version = "0.1", features = ["override"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
ctrlc = "3"
strsim = "0.11.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
tempfile = "3"

[[bench]]
name = "search_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
strip = true
